[build-system]
requires = [
  "setuptools>=65.0.0",
  "setuptools-scm>=8.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "mlproject"
version = "0.0.5"
description = "Utilities for Machine learning including Bonding descriptors"
authors = [{ name = "Aakash Naik", email = "aakash.naik@bam.de" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

lint.pydocstyle.convention = "numpy"

[tool.coverage.paths]
source = [
    "src/mlproject/",
    "/workspace/src/mlproject",
    "/opt/conda/lib/python3.10/site-packages/mlproject/",
    "/opt/conda/lib/python3.11/site-packages/mlproject/",
]

[tool.coverage.run]
include = ["src/"]